[tool.poetry]
name = "quill-delta"
version = "1.0.3"
description = "Python port of the quill.js delta library that enables operational transformation with aditional functionality for rendering html"
authors = ["Brantley Harris <brantley@forge.works>"]
license = "MIT"
homepage = "https://github.com/forgeworks/delta-py"
repository = "https://github.com/forgeworks/delta-py"
readme = "README.md"
packages = [
  { include = "delta" },
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Text Processing :: Markup'
]

[tool.poetry.dependencies]
python = ">=3.12"
diff-match-patch = "^20181111.0"
lxml = {version = ">=6.0", optional = true}
cssutils = {version = ">=2.0", optional = true}

[tool.poetry.extras]
html = ["lxml", "cssutils"]
